added to the readme also able to upsert recurring functions

--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "moment": "^2.22.2",
-    "mongoose": "^5.3.6",
-    "string-similarity": "^2.0.0"
+    "mongoose": "^5.3.6"
   }
 }
